--- a/SABI/css/estilos.css
+++ b/SABI/css/estilos.css
@@ -7,6 +7,8 @@
     --negro:#1E1E1E;
     --blanco:#FFFFFF;
     --gris_oscuro: #444444;
+
+    --sombra_abajo: 0px 5px 10px 0px rgba(0,0,0,0.1);
 }
 /*Fin Variables*/
 
@@ -20,9 +22,16 @@ body{
     padding: 0;
 }
 
-p{
+p, h6{ 
     margin: 0 0;
 }
+
+ul, li{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 /*Fin General*/
 
 /*Fuentes------------------------------------------------------------------------*/
@@ -30,7 +39,7 @@ p{
     font-family: 'K2D', sans-serif;
     font-weight: 400;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 1.5em;
     color: var(--negro);
     text-decoration: none;
 }
@@ -39,7 +48,7 @@ p{
     font-family: 'K2D', sans-serif;
     font-weight: 400;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 1.5em;
     background: var(--degradado);
     text-decoration: none;
     color: transparent;
@@ -50,7 +59,7 @@ p{
     font-family: 'Blinker', sans-serif;
     font-weight: 400;
     font-weight: bolder;
-    font-size: 18px;
+    font-size: 1.2em;
     color: var(--negro);
     text-decoration: none;
 }
@@ -59,7 +68,7 @@ p{
     font-family: 'Blinker', sans-serif;
     font-weight: 400;
     font-weight:normal;
-    font-size: 18px;
+    font-size: 1.2em;
     color: var(--negro);
     text-decoration: none;
 }
@@ -68,9 +77,16 @@ p{
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 300;
     font-weight:normal;
-    font-size: 16px;
+    font-size: 1em;
     color: var(--negro);
+    text-decoration: none;
+}
 
+.parrafo-link{
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 300;
+    font-weight:normal;
+    font-size: 1em;
 }
 
 /*Fin Funtes*/
@@ -83,7 +99,7 @@ nav{
     display: flex;
     align-items: center;
     padding:0 20px;
-    box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.1);
+    box-shadow: var(--sombra_abajo);
     position: fixed;
     z-index: 100;
     top: 0;
@@ -98,7 +114,7 @@ nav{
 
 }
 
-.logo__img{
+.logo_img{
     margin-right: 10px;
     width: 30px;
     margin-top: 2px;
@@ -106,7 +122,7 @@ nav{
 
 
 .menu{
-    width: 70%;
+    width: 60%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -115,7 +131,7 @@ nav{
 
 }
 
-.menu__cont{
+.menu_cont{
     width: 150px;
     height: 100%;
     display: flex;
@@ -124,32 +140,79 @@ nav{
     text-decoration: none;
 }
 
-.menu__cont:hover{
+.menu_cont:hover{
     background-color: var(--gris_claro);;
 }
 
 .user{
-    width: 20%;
+    width: 30%;
     display: flex;
     align-items: center;
     justify-content: end;
 
 }
 
-.user__text{
-    border-radius: 10px;
-    padding: 5px 10px;
+.user_cont{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px 30px 0 0;
+    text-decoration: none;
+    z-index: 99;
 }
 
-.user__text:hover{
-    background-color: var(--gris_claro);
+
+.user_text{
+    padding-left: 30px;
 }
 
-.user__img{
+.user_img{
     width: 40px;
     margin-left: 10px;
     margin-top: 2px;
 }
+
+.user_menu{
+    position:absolute;
+}
+
+.user_menu > li > ul { 
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: var(--gris_claro);
+    border-radius: 0 0 30px 30px;
+    box-shadow: var(--sombra_abajo);
+}
+
+.user_menu:hover > li > ul{
+    display: flex;
+
+}
+
+.user_menu:hover .user_cont{
+    background-color: var(--gris_claro);
+
+}
+
+.desplegable > li{
+    padding: 5px 0;
+    width: 100%;
+    text-align: center;
+}
+
+.desplegable > li:hover{
+    background-color: rgba(0,0,0,0.1);
+}
+
+.desplegable_link-end{
+    border-radius: 0 0 30px 30px;
+
+}
+
 /*Fin Navbar*/
 
 /*Footer---------------------------------------------------------------------------------*/
@@ -160,6 +223,7 @@ footer{
     align-items: center;
     bottom: 0;
     padding: 0 20px;
+
 }
 
 .ayuda{
@@ -171,13 +235,13 @@ footer{
     
 }
 
-.ayuda__text{
+.ayuda_text{
     margin-left: 40px;
     padding: 5px 10px;
     border-radius: 10px;
 }
 
-.ayuda__text:hover{
+.ayuda_text:hover{
     background-color: var(--gris_claro);
 }
 
@@ -189,13 +253,13 @@ footer{
 
 }
 
-.redes__icon{
+.redes_icon{
     width: 35px;
     margin: 0 20px;
     transition: 0.2s;
 }
 
-.redes__icon:hover{
+.redes_icon:hover{
     margin-bottom: 5px;
 
 
@@ -209,16 +273,16 @@ footer{
 
 }
 
-.subir__text{
+.subir_text{
     padding: 5px 10px;
     border-radius: 10px;
 }
 
-.subir__text:hover{
+.subir_text:hover{
     background-color: var(--gris_claro);
 }
 
-.footer__logo{
+.footer_logo{
     width: 30px;    
     margin-right: 20px;
 }
@@ -266,6 +330,7 @@ footer{
     width: 100%;
     margin-bottom: 20px;
     padding: 0 20px;
+    margin-top: 20px;
 }
 
 .input{
@@ -305,7 +370,7 @@ footer{
 }
 
 .encabezado_text{
-    width: calc(100%/3);
+    width: calc(60%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -313,14 +378,14 @@ footer{
 }
 
 .encabezado_logo{
-    width: calc(100%/3);
+    width: calc(20%);
     display: flex;
     justify-content: end;
     align-items:center;
 
 }
 .separador_3{
-    width: calc(100%/3);
+    width: calc(20%);
 
 }
 /*Fin Registro*/
@@ -337,7 +402,7 @@ footer{
 }
 
 .boton_principal:hover{
-    box-shadow: 2px 2px 10px inset var(--gris_oscuro);
+    box-shadow: 2px 2px 10px inset var(--negro);
     cursor: pointer;
 }
 /*Fin botones*/
@@ -382,3 +447,23 @@ footer{
     background: rgba(0,0,0,0.1);
 }
 /*Fin admin*/
+
+/*Inicio---------------------------------------------------------------*/
+
+
+/*Banner-------------------------------------------------------------------------*/
+.banner{
+    
+    width: 100%;
+    background-size: cover;
+    
+}
+
+.carrusel{
+    margin-top: 60px;
+}
+
+
+/*Fin Banner*/
+
+/*Fin Inicio*/ 
